--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=4000
-AUTH_MODE=false
+AUTH_MODE=true
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://admin:admin@rest-service.igaig.mongodb.net/rsstrello?retryWrites=true&w=majority
